--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
 ---
 layout: page    
 header-img: "img/red.jpg"  
+title: "维度攻击"
 description: "你来到了一片荒芜之地"
 permalink: 404.html  
 ---
-
-<p>你受到了维度攻击。</p>
 
 <p>不明力量入侵，你想要访问的页面被摧毁了。</p>
 
