--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: One of a kind.
 description: "Jerry Cai"
+header-img: "img/zhihu.jpg"
 ---
 
 {% for post in paginator.posts %}
